media-server/tests/deployment-tautulli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: test
spec:
  selector:
    matchLabels:
      app: tautulli
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: tautulli
        version: v1
    spec:
      containers:
      - name: tautulli
        image: ghcr.io/linuxserver/tautulli
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 250m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8181
          initialDelaySeconds: 15
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        env:      
        - name: PUID
          value: "10050"
        - name: PGID
          value: "10050"
        - name: TZ
          value: America/Chicago
        ports:
        - containerPort: 8181
          name:  http
      restartPolicy: Always

---
#Loadbalancer Service
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: test
  labels:
    app: tautulli
    service: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - name: http
    port: 8181
    targetPort: 8181
    protocol: TCP
