media-server/tests/glusterfs-enpoints.yaml
# Endpoints 

apiVersion: v1
kind: Endpoints
metadata:
  namespace: media-server
  name: gfs-cluster
subsets:
- addresses:
  - ip: 192.168.200.101 # {"$kpt-set}:"ip"}
  ports:
  - port: 49152  # ip shown when done "gluster volume status"
- addresses:
  - ip: 192.168.200.102
  ports:
  - port: 49152
- addresses:
  - ip: 192.168.200.104
  ports:
  - port: 49152

---

# Service
apiVersion: v1
kind: Service
metadata:
  namespace: media-server
  name: gfs-cluster
spec:
  ports:
  - port: 49152
