media-server/tests/test-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-pod
  namespace: media-server
spec:
  containers:
  - name: test-pod
    image: gcr.io/google_containers/busybox:1.24
    imagePullPolicy: IfNotPresent
    command:
      - "/bin/sh"
    args:
      - "-c"
      - "touch /downloads/SUCCESS && touch /appdata/success"
    volumeMounts:
      - name: nfs-downloads
        mountPath: "/downloads"
      - name: nfs-appdata
        mountPath: /appdata
  restartPolicy: "Never"
  volumes:
    - name: nfs-downloads
      persistentVolumeClaim:
        claimName: claim-downloads
    - name: nfs-appdata
      persistentVolumeClaim:
        claimName: claim-appdata
