media-server/tests/transmission-deployement.yaml
---

#Main deployement


apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: media-server
      department: transmission
  replicas: 1
  template:
    metadata:
      labels:
        app: media-server
        department: transmission
    spec:
      hostNetwork: true
      volumes:
      - name: pv-transmission-config
        persistentVolumeClaim:
          claimName: pvc-transmission-config
      - name: pv-transmission-downloads
        persistentVolumeClaim:
          claimName: pvc-transmission-downloads
      containers:
      - name: transmission
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1024m
            memory: 1Gi
        image: ghcr.io/linuxserver/transmission
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9091
        - containerPort: 51413
        - containerPort: 51413
          protocol: UDP
        env:
        - name: name
          value: "transmission"
        - name: PUID
          value: "10997"
        - name: PGID
          value: "10997"
        - name: TRANSMISSION_WEB_HOME
          value: "/combustion-release/"
        volumeMounts:
        - mountPath: "/config"
          name: pv-transmission-config
        - mountPath: "/downloads"
          name: pv-transmission-downloads


--- 
#Persistent Volumes for Transmission

apiVersion: v1
kind: PersistentVolume
metadata:
  name: pv-transmission-config            # <-- name can be changed
spec:
  capacity:
    storage: 10Mi
  accessModes:
    - ReadWriteMany
  nfs:
    server: 192.168.200.169
    path: "/mnt/user/kube/appdata/transmission/" 

---

apiVersion: v1
kind: PersistentVolume
metadata:
  name: pv-transmission-downloads          # <-- name can be changed
spec:
  capacity:
    storage: 10Gi
  accessModes:
    - ReadWriteMany
  nfs:
    server: 192.168.200.169
    path: "/mnt/user/kube/downloads/transmission/"


---
# pvc-transmission.yaml
# Persistent volume Claims Transmission


apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-transmission-config        # <-- In transmission.yaml
  namespace: media-server
spec:
  accessModes:
    - ReadWriteMany                    # <-- For NFS
  storageClassName: ""
  volumeName: pv-transmission-config   # <-- In pv-transmission.yaml
  resources:
    requests:
      storage: 10Mi                    # <-- Size of the volume

---

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-transmission-downloads        # <-- In transmission.yaml
  namespace: media-server
spec:
  accessModes:
    - ReadWriteMany                    # <-- For NFS
  storageClassName: ""
  volumeName: pv-transmission-downloads   # <-- In pv-transmission.yaml
  resources:
    requests:
      storage: 10Mi                    # <-- Size of the volume
